@startuml
title Tutor Support System - Overview Class Diagram
left to right direction
skinparam linetype ortho

class User {
  +id: string
  +username: string
  +name: string
  +email: string
  +role: enum(admin, tutor, member)
  +avatar: string
  +skills: string[]
  +settings: NotificationSetting
}

class Session {
  +id: string
  +tutorId: string
  +tutorName: string
  +subject: string
  +date: date
  +startTime: string
  +endTime: string
  +location: string
  +type: enum(online, offline)
  +link: string
  +maxStudents: number
  +registered: number
  +status: enum(scheduled, cancelled, completed)
  +students: string[]
}

class PairRequest {
  +id: string
  +studentId: string
  +studentName: string
  +tutorId: string
  +status: enum(pending, accepted, rejected)
  +createdAt: datetime
}

class Conversation {
  +id: string
  +participants: string[]
  +type: enum(direct, group)
  +lastMessage: Message
  +unreadCount: number
  +isMarked: boolean
  +isMuted: boolean
}

class Message {
  +id: string
  +conversationId: string
  +senderId: string
  +content: string
  +attachments: Attachment[]
  +timestamp: datetime
  +isRead: boolean
}

class Attachment {
  +id: string
  +name: string
  +url: string
  +size: string
}

class Notification {
  +id: string
  +recipientId: string
  +type: enum(session_reminder, pairing, feedback, progress, system)
  +title: string
  +content: string
  +channels: string[]
  +priority: enum(low, normal, high)
  +status: enum(unread, read)
  +createdAt: datetime
  +scheduledAt: datetime
}

class NotificationSetting {
  +inApp: boolean
  +email: boolean
  +sms: boolean
}

class Feedback {
  +id: string
  +sessionId: string
  +studentId: string
  +tutorId: string
  +subject: string
  +ratings: Rating
  +goodPoints: string
  +improvements: string
  +comment: string
  +recommend: boolean
  +anonymous: boolean
  +status: enum(draft, published)
  +tutorViewed: boolean
  +createdAt: datetime
}

class Rating {
  +quality: number
  +knowledge: number
  +communication: number
  +helpfulness: number
  +timeManagement: number
}

class Resource {
  +id: string
  +name: string
  +description: string
  +category: enum(lecture, exercise, reference)
  +uploadedBy: string
  +uploadDate: date
  +size: string
  +type: string
  +url: string
  +storedName: string
}

class Progress {
  +id: string
  +studentId: string
  +studentName: string
  +completed: number
  +total: number
  +percentage: number
  +lastUpdate: date
}

class Report {
  +type: string
  +dateRange: string
  +format: enum(pdf, excel)
  +payload: object
}

User "1" -- "0..*" Session : tutors
User "0..*" -- "0..*" Session : registrations
User "1" -- "0..*" PairRequest : sends/receives
Session "1" -- "0..*" Feedback
Session "1" -- "0..*" Notification
Session "1" -- "0..*" PairRequest
User "1" -- "0..*" Conversation : participates
Conversation "1" -- "0..*" Message
Message "0..*" -- "0..*" Attachment
User "1" -- "0..*" Notification : receives
User "1" -- "0..*" Feedback : tutors
User "1" -- "0..*" Resource : uploads
User "1" -- "0..*" Progress : tracks (tutor)
Report "1" -- "0..*" User : generated by admin

@enduml
